--- a/courses.html
+++ b/courses.html
@@ -427,7 +427,7 @@ main {
             <li><a class="dropdown-item" href="assignments.html">Assignment</a></li>
             <li><a class="dropdown-item" href="profile.html">Profile</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="login.html">Logout</a></li>
+            <li><a class="dropdown-item" href="index.html">Logout</a></li>
           </ul>
         </li>
       </ul>
