--- a/dashboard.html
+++ b/dashboard.html
@@ -351,7 +351,7 @@ text-align: center;
 <li><a class="dropdown-item" href="assignments.html">Assignment</a></li>
 <li><a class="dropdown-item" href="profile.html">Profile</a></li>
 <li><hr class="dropdown-divider"></li>
-<li><a class="dropdown-item" href="login.html">Logout</a></li>
+<li><a class="dropdown-item" href="index.html">Logout</a></li>
 </ul>
 </li>
 </ul>
